Add BABASHKA_FEATURE_DATALEVIN and BABASHKA_FEATURE_CORE_LOGIC feature flags
Custom feature build for the Levin VSCode extension: embeds datalevin
0.10.18 (datalog + KV API) and core.logic 1.1.0 (incl. CLP(FD)) into bb.

Claude-Session: https://claude.ai/code/session_013FKUPDbZ7qf6yYutMVYxEC